--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,9 @@ web-build/
 prjctr-hw.code-workspace
 prjctr-course.code-workspace
 # macOS
+./.DS_Store
 .DS_Store
+DS_Store
 
 
 # @generated expo-cli sync-2b81b286409207a5da26e14c78851eb30d8ccbdb
